removed scroll restrictment when dialog opened to prevent jumps

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -65,11 +65,6 @@ html {
   }
 }
 
-// Prevent background scroll when dialog is open
-html:has(dialog[open]) {
-  overflow: hidden;
-}
-
 // Ensure body fills the specific height if needed,
 // otherwise it inherits naturally.
 body {
